feat: show anonymous visit analytics via RabbitMQ and MongoDB
